--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.15.6",
     "express-subdomain": "^1.0.5",
     "serialport": "7.0.2",
+    "rpi-ws281x-native": "0.9.0",
     "ws": "^3.1.0"
   }
 }
